[gd_scene load_steps=4 format=3 uid="uid://cctdohmvgmcwm"]

[ext_resource type="Script" uid="uid://b5t72t0ccrgdq" path="res://scripts/multiplayer/lobby_creation_panel.gd" id="1_xprer"]
[ext_resource type="PackedScene" uid="uid://dvriu1uuergvg" path="res://scenes/multiplayer/censored_name_line.tscn" id="2_ixe2w"]

[sub_resource type="Theme" id="Theme_ixe2w"]
default_font_size = 40

[node name="lobby_creation_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ixe2w")
script = ExtResource("1_xprer")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.158168, 0.629567, 0.804896, 1)

[node name="title" type="Label" parent="."]
custom_minimum_size = Vector2(100, 0)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 90
text = "Create a lobby"
horizontal_alignment = 1
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="nameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Lobby Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="lobbyNameLine" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_ixe2w")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Lobby name here"
minLength = 5
maxLength = 25

[node name="playerName" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Player Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="playerNameLine" parent="MarginContainer/HBoxContainer/VBoxContainer" instance=ExtResource("2_ixe2w")]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Player name here"

[node name="start lobby" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Create Sever"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="OptionalLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Optional:"
horizontal_alignment = 1
autowrap_mode = 2

[node name="maxPlayersLine" type="SpinBox" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 1.0
max_value = 32.0
value = 4.0
rounded = true
prefix = "Players:"
suffix = " (Max)"

[node name="portLine" type="SpinBox" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
min_value = 1023.0
max_value = 49151.0
value = 1023.0
rounded = true
prefix = "Port:"

[node name="back" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="debugText" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "debug text"

[connection signal="nameValidityChanged" from="MarginContainer/HBoxContainer/VBoxContainer/lobbyNameLine" to="." method="_on_lobby_name_line_name_validity_changed"]
[connection signal="nameValidityChanged" from="MarginContainer/HBoxContainer/VBoxContainer/playerNameLine" to="." method="_on_player_name_line_name_validity_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/start lobby" to="." method="_on_start_lobby_pressed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/maxPlayersLine" to="." method="_on_max_players_line_value_changed"]
[connection signal="value_changed" from="MarginContainer/HBoxContainer/VBoxContainer2/portLine" to="." method="_on_port_line_value_changed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/back" to="." method="_on_back_pressed"]
